# safe-hri-gnn

./: README.md  a.py  requirements.txt
config/: system_params.yaml
data/: process_h36m.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: PROJECT_COMPLETION_SUMMARY.md
notebooks/: 01_model_prototyping.ipynb
src/hrc_msgs/: CMakeLists.txt  package.xml
src/hrc_msgs/msg/: PoseGraph.msg  PoseGraphHistory.msg  PredictedTrajectory.msg
src/perception/: package.xml  setup.py
src/perception/perception/: data_processing_node.py  kalman_filter.py
src/prediction_model/: package.xml  setup.py  train.py
src/prediction_model/prediction_model/: model.py  predict_node.py  utils.py
src/robot_control/: package.xml  setup.py
src/robot_control/launch/: system.launch.py
src/robot_control/robot_control/: motion_planner_node.py
tests/: test_integration.py  test_prediction_model.py
